--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' }}">
 
-  <script type="text/javascript" src="js/jquery.min.js" ></script>
+  <script type="text/javascript" src="/js/jquery.min.js" ></script>
   <!--[if lt IE 9]>
     <script src="dist/html5shiv.js"></script>
   <![endif]-->
