--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -21,5 +21,6 @@
     <label for="contact-message">Message</label>
     <textarea id="contact-message" name="message"></textarea>
   </div>
+  <input type="hidden" name="_next" value="/thanks.html" />
   <input class="button" type="submit" value="Submit" />
 </form>
