Validator updates (removed hgroups)

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -1,7 +1,5 @@
 <form class="contact-form" method="POST" action="https://formspree.io/alexlinek267@gmail.com">
-  <hgroup>
-    <h2>Get in Touch</h2>
-  </hgroup>
+  <h2>Get in Touch</h2>
   <input type="hidden" name="_subject" value="Website Form Submission" />
   <div class="field">
     <label for="contact-name">Name</label>
@@ -12,7 +10,7 @@
     <input type="tel" id="contact-phone" name="phone" />
   </div>
   <div class="field radio-buttons">
-    <label for="contact-service">Type of Request</label>
+    <label for="service-type">Type of Request</label>
     <input type="radio" name="service-type" value="residential" />Residential
     <input type="radio" name="service-type" value="commercial" />Commercial
   </div>
