--- a/_includes/services_overview.html
+++ b/_includes/services_overview.html
@@ -1,9 +1,11 @@
 <div class="services-wrapper">
   <div class="group">
-    <hgroup class="span1-1">
-      <h1>Services</h1>
+    <div class="span1-1">
+      <div class="heading">
+        <h1>Services</h1>
+      </div>
       <p>For all jobs, big and small, you can count on Linek Plumbing to provide high quality work at a fair price.</p>
-    </hgroup>
+    </div>
   </div>
 
   <div class="group">
