--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -100,7 +100,7 @@
   @media screen and (min-width: 440px) and (max-width: 600px) {
     height: 900px;
   }
-  hgroup {
+  .heading {
     margin-bottom: 2em;
     text-align: center;
     h1 {
