Previous scroll fix success and radio label "for"

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -10,7 +10,7 @@
     <input type="tel" id="contact-phone" name="phone" />
   </div>
   <div class="field radio-buttons">
-    <label for="service-type">Type of Request</label>
+    <label>Type of Request</label>
     <input type="radio" name="service-type" value="residential" />Residential
     <input type="radio" name="service-type" value="commercial" />Commercial
   </div>
