--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -1,4 +1,4 @@
-<form class="contact-form" method="POST" action="https://formspree.io/alexlinek267@gmail.com">
+<form class="contact-form" method="POST" action="https://formspree.io/contact@linekplbg.com">
   <h2>Get in Touch</h2>
   <input type="hidden" name="_subject" value="Website Form Submission" />
   <div class="field">
