--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
             title="Linek Plumbing is celebrating 100 years of service" />
         </div>
         <div class="top-nav-right">
-          <a class="top-nav-phone" href="tel:+{{ site.phone }}">{{ site.phone }}</a>
+          <a class="top-nav-phone" href="tel:{{ site.phone }}">{{ site.phone }}</a>
         </div>
       </div>
       <div class="logo">
