--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -304,3 +304,9 @@
     display: none;
   }
 }
+
+
+// Privacy Page -------------------------------------
+.privacy-page {
+  margin: 5.5em 0 4em;
+}
