Form update with email field

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -9,6 +9,10 @@
     <label for="contact-phone">Phone</label>
     <input type="tel" id="contact-phone" name="phone" />
   </div>
+  <div class="field">
+    <label for="contact-email">Email</label>
+    <input type="email" id="contact-email" name="email" />
+  </div>
   <div class="field radio-buttons">
     <label>Type of Request</label>
     <input type="radio" name="service-type" value="residential" />Residential
