--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -1,4 +1,4 @@
-<form class="contact-form" method="POST" action="https://formspree.io/contact@linekplbg.com">
+<form class="contact-form" id="contactform" method="POST">
   <h2>Get in Touch</h2>
   <input type="hidden" name="_subject" value="Website Form Submission" />
   <div class="field">
@@ -26,3 +26,7 @@
   <input type="hidden" name="_next" value="/thanks.html" />
   <input class="button" type="submit" value="Submit" />
 </form>
+<script>
+    var contactform =  document.getElementById('contactform');
+    contactform.setAttribute('action', 'https://formspree.io/' + 'contact' + '@' + 'linekplbg' + '.' + 'com');
+</script>
