--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,9 +40,11 @@
     ga('create', 'UA-86302115-1', 'auto');
     ga('send', 'pageview');
   </script>
-  
+
   <script type="text/javascript" src="/js/jquery.min.js" ></script>
   <!--[if lt IE 9]>
     <script src="dist/html5shiv.js"></script>
   <![endif]-->
+
+  {% seo %}
 </head>
