--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,10 +22,13 @@
       </a>
       <div class="main-nav">
         <ul class="main-nav-items">
-          <li>{% include nav_item.html title='Residential' url='residential' %}</li>
-          <li>{% include nav_item.html title='Commercial' url='commercial' %}</li>
-          <li>{% include nav_item.html title='About' url='about' %}</li>
-          <li>{% include nav_item.html title='Contact' url='contact' %}</li>
+          {% for item in site.data.navigation.docs %}
+            <li>
+              <a class="page-link{% if item.url == page.url %} active{% endif %}" href="{{ site.url }}/{{ item.url }}">
+                {{ item.title }}
+              </a>
+            </li>
+          {% endfor %}
         </ul>
       </div>
     </nav>
