--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
         </div>
       </div>
       <div class="logo">
-        <a href="{{ site.baseurl }}" class="main-nav-logo">
+        <a href="{{ site.url }}" class="main-nav-logo">
           <img src="/images/logo.svg" alt="Linek Plumbing Logo" title="Linek Plumbing" />
         </a>
       </div>
@@ -24,7 +24,7 @@
         <ul class="main-nav-items">
           {% for item in site.data.navigation.docs %}
             <li>
-              <a class="page-link{% if item.url == page.url %} active{% endif %}" href="{{ site.url }}/{{ item.url }}">
+              <a class="page-link" href="{{ site.url }}/{{ item.url }}">
                 {{ item.title }}
               </a>
             </li>
